// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`GrantListEditorRow should render default mobile view 1`] = `
<div>
  <span
    class="MuiBox-root css-0"
    data-testid="confirmDialogBox"
  />
  <li
    class="MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-divider css-1wa6ns3-MuiListItem-root"
    style="padding: 8px 0px 8px 0px;"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-1l3uuuo-MuiGrid-root"
      data-testid="related-service-list-row-0"
    >
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-10 MuiGrid-grid-sm-11 MuiGrid-grid-md-9 css-19a21ue-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-21tbdt-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-5 css-1qcs568-MuiGrid-root"
          >
            <div
              class="MuiListItemText-root MuiListItemText-multiline css-14ln1j6-MuiListItemText-root"
              style="padding: 0px;"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-sq7264-MuiTypography-root"
              >
                1234
              </p>
              <span
                class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1wlhsw4-MuiTypography-root"
              />
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-sm-3 css-9h4ma8-MuiGrid-root"
          >
            <div
              class="MuiListItemText-root MuiListItemText-multiline css-14ln1j6-MuiListItemText-root"
              style="padding: 0px;"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-6sa4r2-MuiTypography-root"
              >
                desc
              </p>
              <span
                class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1wlhsw4-MuiTypography-root"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-2 MuiGrid-grid-sm-1 MuiGrid-grid-md-3 css-13bwnp6-MuiGrid-root"
      >
        <div
          class="MuiListItemSecondaryAction-root css-zezwi5-MuiListItemSecondaryAction-root"
          style="position: relative; width: 100%; margin: 0px 0px -32px 0px;"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-d64g0g-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-8 css-1si3tw9-MuiGrid-root"
            >
              <div
                aria-label="Move entry up the order"
                class=""
                data-mui-internal-clone-element="true"
                style="display: inline;"
              >
                <button
                  aria-label="Move entry up the order"
                  class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeLarge css-173uukt-MuiButtonBase-root-MuiIconButton-root"
                  data-testid="related-service-list-move-up=0"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                    data-testid="KeyboardArrowUpIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7.41 15.41 12 10.83l4.59 4.58L18 14l-6-6-6 6z"
                    />
                  </svg>
                </button>
              </div>
              <div
                aria-label="Move entry down the order"
                class=""
                data-mui-internal-clone-element="true"
                style="display: inline;"
              >
                <button
                  aria-label="Move entry down the order"
                  class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeLarge css-173uukt-MuiButtonBase-root-MuiIconButton-root"
                  data-testid="related-service-list-move-down=0"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                    data-testid="KeyboardArrowDownIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7.41 8.59 12 13.17l4.59-4.58L18 10l-6 6-6-6z"
                    />
                  </svg>
                </button>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-b3sosk-MuiGrid-root"
            >
              <div
                aria-label="Remove this entry"
                class=""
                data-mui-internal-clone-element="true"
                style="display: inline;"
              >
                <button
                  aria-label="Remove this entry"
                  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-173uukt-MuiButtonBase-root-MuiIconButton-root"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                    data-testid="DeleteIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
</div>
`;

exports[`GrantListEditorRow should render default view 1`] = `
<div>
  <span
    class="MuiBox-root css-0"
    data-testid="confirmDialogBox"
  />
  <li
    class="MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-divider css-1wa6ns3-MuiListItem-root"
    style="padding: 8px 0px 8px 0px;"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-1l3uuuo-MuiGrid-root"
      data-testid="related-service-list-row-0"
    >
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-10 MuiGrid-grid-sm-11 MuiGrid-grid-md-9 css-19a21ue-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-21tbdt-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-5 css-1qcs568-MuiGrid-root"
          >
            <div
              class="MuiListItemText-root MuiListItemText-multiline css-14ln1j6-MuiListItemText-root"
              style="padding: 0px;"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-sq7264-MuiTypography-root"
              >
                1234
              </p>
              <span
                class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1wlhsw4-MuiTypography-root"
              />
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-sm-3 css-9h4ma8-MuiGrid-root"
          >
            <div
              class="MuiListItemText-root MuiListItemText-multiline css-14ln1j6-MuiListItemText-root"
              style="padding: 0px;"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-sq7264-MuiTypography-root"
              >
                desc
              </p>
              <span
                class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1wlhsw4-MuiTypography-root"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-2 MuiGrid-grid-sm-1 MuiGrid-grid-md-3 css-13bwnp6-MuiGrid-root"
      >
        <div
          class="MuiListItemSecondaryAction-root css-zezwi5-MuiListItemSecondaryAction-root"
          style="position: relative; width: 100%; margin: 0px 0px -32px 0px;"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-d64g0g-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-8 css-1si3tw9-MuiGrid-root"
            >
              <div
                aria-label="Move entry up the order"
                class=""
                data-mui-internal-clone-element="true"
                style="display: inline;"
              >
                <button
                  aria-label="Move entry up the order"
                  class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeLarge css-173uukt-MuiButtonBase-root-MuiIconButton-root"
                  data-testid="related-service-list-move-up=0"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                    data-testid="KeyboardArrowUpIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7.41 15.41 12 10.83l4.59 4.58L18 14l-6-6-6 6z"
                    />
                  </svg>
                </button>
              </div>
              <div
                aria-label="Move entry down the order"
                class=""
                data-mui-internal-clone-element="true"
                style="display: inline;"
              >
                <button
                  aria-label="Move entry down the order"
                  class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeLarge css-173uukt-MuiButtonBase-root-MuiIconButton-root"
                  data-testid="related-service-list-move-down=0"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                    data-testid="KeyboardArrowDownIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7.41 8.59 12 13.17l4.59-4.58L18 10l-6 6-6-6z"
                    />
                  </svg>
                </button>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-4 css-1bhcdn4-MuiGrid-root"
            >
              <div
                aria-label="Remove this entry"
                class=""
                data-mui-internal-clone-element="true"
                style="display: inline;"
              >
                <button
                  aria-label="Remove this entry"
                  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-173uukt-MuiButtonBase-root-MuiIconButton-root"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                    data-testid="DeleteIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
</div>
`;

exports[`GrantListEditorRow should render given locale 1`] = `
<div>
  <span
    class="MuiBox-root css-0"
    data-testid="confirmDialogBox"
  />
  <li
    class="MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-divider css-1wa6ns3-MuiListItem-root"
    style="padding: 8px 0px 8px 0px;"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-1l3uuuo-MuiGrid-root"
      data-testid="related-service-list-row-0"
    >
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-10 MuiGrid-grid-sm-11 MuiGrid-grid-md-9 css-19a21ue-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-21tbdt-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-5 css-1qcs568-MuiGrid-root"
          >
            <div
              class="MuiListItemText-root MuiListItemText-multiline css-14ln1j6-MuiListItemText-root"
              style="padding: 0px;"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-sq7264-MuiTypography-root"
              >
                1234
              </p>
              <span
                class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1wlhsw4-MuiTypography-root"
              />
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-sm-3 css-9h4ma8-MuiGrid-root"
          >
            <div
              class="MuiListItemText-root MuiListItemText-multiline css-14ln1j6-MuiListItemText-root"
              style="padding: 0px;"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-sq7264-MuiTypography-root"
              >
                desc
              </p>
              <span
                class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1wlhsw4-MuiTypography-root"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-2 MuiGrid-grid-sm-1 MuiGrid-grid-md-3 css-13bwnp6-MuiGrid-root"
      >
        <div
          class="MuiListItemSecondaryAction-root css-zezwi5-MuiListItemSecondaryAction-root"
          style="position: relative; width: 100%; margin: 0px 0px -32px 0px;"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-d64g0g-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-8 css-1si3tw9-MuiGrid-root"
            >
              <div
                aria-label="Move up"
                class=""
                data-mui-internal-clone-element="true"
                style="display: inline;"
              >
                <button
                  aria-label="Move up"
                  class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeLarge css-173uukt-MuiButtonBase-root-MuiIconButton-root"
                  data-testid="related-service-list-move-up=0"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                    data-testid="KeyboardArrowUpIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7.41 15.41 12 10.83l4.59 4.58L18 14l-6-6-6 6z"
                    />
                  </svg>
                </button>
              </div>
              <div
                aria-label="Move down"
                class=""
                data-mui-internal-clone-element="true"
                style="display: inline;"
              >
                <button
                  aria-label="Move down"
                  class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeLarge css-173uukt-MuiButtonBase-root-MuiIconButton-root"
                  data-testid="related-service-list-move-down=0"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                    data-testid="KeyboardArrowDownIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7.41 8.59 12 13.17l4.59-4.58L18 10l-6 6-6-6z"
                    />
                  </svg>
                </button>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-4 css-1bhcdn4-MuiGrid-root"
            >
              <div
                aria-label="Delete hint"
                class=""
                data-mui-internal-clone-element="true"
                style="display: inline;"
              >
                <button
                  aria-label="Delete hint"
                  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-173uukt-MuiButtonBase-root-MuiIconButton-root"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                    data-testid="DeleteIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
</div>
`;

exports[`GrantListEditorRow should render given related service data 1`] = `
<div>
  <span
    class="MuiBox-root css-0"
    data-testid="confirmDialogBox"
  />
  <li
    class="MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-divider css-1wa6ns3-MuiListItem-root"
    style="padding: 8px 0px 8px 0px;"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-1l3uuuo-MuiGrid-root"
      data-testid="related-service-list-row-0"
    >
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-10 MuiGrid-grid-sm-11 MuiGrid-grid-md-9 css-19a21ue-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-21tbdt-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-5 css-1qcs568-MuiGrid-root"
          >
            <div
              class="MuiListItemText-root MuiListItemText-multiline css-14ln1j6-MuiListItemText-root"
              style="padding: 0px;"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-tki2hk-MuiTypography-root"
              >
                1234
              </p>
              <span
                class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1wlhsw4-MuiTypography-root"
              />
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-sm-3 css-9h4ma8-MuiGrid-root"
          >
            <div
              class="MuiListItemText-root MuiListItemText-multiline css-14ln1j6-MuiListItemText-root"
              style="padding: 0px;"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-tki2hk-MuiTypography-root"
              >
                desc
              </p>
              <span
                class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1wlhsw4-MuiTypography-root"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-2 MuiGrid-grid-sm-1 MuiGrid-grid-md-3 css-13bwnp6-MuiGrid-root"
      >
        <div
          class="MuiListItemSecondaryAction-root css-zezwi5-MuiListItemSecondaryAction-root"
          style="position: relative; width: 100%; margin: 0px 0px -32px 0px;"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-d64g0g-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-8 css-1si3tw9-MuiGrid-root"
            >
              <div
                aria-label="Move up"
                class=""
                data-mui-internal-clone-element="true"
                style="display: inline;"
              >
                <button
                  aria-label="Move up"
                  class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeLarge css-173uukt-MuiButtonBase-root-MuiIconButton-root"
                  data-testid="related-service-list-move-up=0"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1krx6eu-MuiSvgIcon-root"
                    data-testid="KeyboardArrowUpIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7.41 15.41 12 10.83l4.59 4.58L18 14l-6-6-6 6z"
                    />
                  </svg>
                </button>
              </div>
              <div
                aria-label="Move down"
                class=""
                data-mui-internal-clone-element="true"
                style="display: inline;"
              >
                <button
                  aria-label="Move down"
                  class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeLarge css-173uukt-MuiButtonBase-root-MuiIconButton-root"
                  data-testid="related-service-list-move-down=0"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1krx6eu-MuiSvgIcon-root"
                    data-testid="KeyboardArrowDownIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7.41 8.59 12 13.17l4.59-4.58L18 10l-6 6-6-6z"
                    />
                  </svg>
                </button>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-4 css-1bhcdn4-MuiGrid-root"
            >
              <div
                aria-label="Delete hint"
                class=""
                data-mui-internal-clone-element="true"
                style="display: inline;"
              >
                <button
                  aria-label="Delete hint"
                  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-173uukt-MuiButtonBase-root-MuiIconButton-root"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                    data-testid="DeleteIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
</div>
`;

exports[`GrantListEditorRow should show confirmation box 1`] = `
<div
  aria-hidden="true"
>
  <span
    class="MuiBox-root css-0"
    data-testid="confirmDialogBox"
  />
  <li
    class="MuiListItem-root MuiListItem-gutters MuiListItem-padding MuiListItem-divider css-1wa6ns3-MuiListItem-root"
    style="padding: 8px 0px 8px 0px;"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-1l3uuuo-MuiGrid-root"
      data-testid="related-service-list-row-0"
    >
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-10 MuiGrid-grid-sm-11 MuiGrid-grid-md-9 css-19a21ue-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-21tbdt-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-sm-5 css-1qcs568-MuiGrid-root"
          >
            <div
              class="MuiListItemText-root MuiListItemText-multiline css-14ln1j6-MuiListItemText-root"
              style="padding: 0px;"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-sq7264-MuiTypography-root"
              >
                1234
              </p>
              <span
                class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1wlhsw4-MuiTypography-root"
              />
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-sm-3 css-9h4ma8-MuiGrid-root"
          >
            <div
              class="MuiListItemText-root MuiListItemText-multiline css-14ln1j6-MuiListItemText-root"
              style="padding: 0px;"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 MuiTypography-noWrap css-sq7264-MuiTypography-root"
              >
                desc
              </p>
              <span
                class="MuiTypography-root MuiTypography-caption MuiTypography-noWrap css-1wlhsw4-MuiTypography-root"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-2 MuiGrid-grid-sm-1 MuiGrid-grid-md-3 css-13bwnp6-MuiGrid-root"
      >
        <div
          class="MuiListItemSecondaryAction-root css-zezwi5-MuiListItemSecondaryAction-root"
          style="position: relative; width: 100%; margin: 0px 0px -32px 0px;"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-d64g0g-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-8 css-1si3tw9-MuiGrid-root"
            >
              <div
                aria-label="Move entry up the order"
                class=""
                data-mui-internal-clone-element="true"
                style="display: inline;"
              >
                <button
                  aria-label="Move entry up the order"
                  class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeLarge css-173uukt-MuiButtonBase-root-MuiIconButton-root"
                  data-testid="related-service-list-move-up=0"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                    data-testid="KeyboardArrowUpIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7.41 15.41 12 10.83l4.59 4.58L18 14l-6-6-6 6z"
                    />
                  </svg>
                </button>
              </div>
              <div
                aria-label="Move entry down the order"
                class=""
                data-mui-internal-clone-element="true"
                style="display: inline;"
              >
                <button
                  aria-label="Move entry down the order"
                  class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeLarge css-173uukt-MuiButtonBase-root-MuiIconButton-root"
                  data-testid="related-service-list-move-down=0"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                    data-testid="KeyboardArrowDownIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7.41 8.59 12 13.17l4.59-4.58L18 10l-6 6-6-6z"
                    />
                  </svg>
                </button>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-4 css-1bhcdn4-MuiGrid-root"
            >
              <div
                aria-label="Remove this entry"
                class=""
                data-mui-internal-clone-element="true"
                style="display: inline;"
              >
                <button
                  aria-label="Remove this entry"
                  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-173uukt-MuiButtonBase-root-MuiIconButton-root"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                    data-testid="DeleteIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
</div>
`;
